change heading text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>
-        <span class="letter">H</span>
+        <span class="letter">J</span>
         <span class="letter">E</span>
         <span class="letter">L</span>
         <span class="letter">L</span>
